# production-ready-sha256

./: .gitignore  .gitleaks.toml  00-governance.sha256  00-governance.sha256.asc  01-desing.sha256  01-desing.sha256.asc  01-signed-baseline-commit.txt  02-commit-object.txt  02-contracts.sha256  02-contracts.sha256.asc  03-channels.sha256  03-channels.sha256.asc  03-signed-tag-object.txt  04-bffs.sha256  04-bffs.sha256.asc  04-commit-verification.txt  05-core-bank.sha256  05-core-bank.sha256.asc  05-tag-verification.txt  06-folder-signature-summary.txt  06-risk-control.sha256  06-risk-control.sha256.asc  07-integrations.sha256  07-integrations.sha256.asc  07-production-ready-source.bundle  07-repository-file-manifest.sha256  07-repository-file-manifest.sha256.asc  08-baseline-identifiers.txt  08-bundle-verification.txt  08-iso20022.sha256  08-iso20022.sha256.asc  09-data-platform.sha256  09-data-platform.sha256.asc  09-evidence-manifest.sha256  09-evidence-manifest.sha256.asc  09-git-remotes.txt  10-platform.sha256  10-platform.sha256.asc  11-security.sha256  11-security.sha256.asc  (+23 more)
06-risk-control/REGENERA-06-RISK-CONTROL-10-10/: .gitignore  ASSINATURA-EXTERNA-REQUERIDA.md  CHANGELOG.md  Makefile  README-APLICACAO.md  README.md  pyproject.toml
06-risk-control/REGENERA-06-RISK-CONTROL-10-10/authorship/: ATA-TECNICA-2026-06-26.md  COMMITS-ASSINADOS.md  DECLARACAO-DE-PROCEDENCIA.md  HISTORICO-INCREMENTAL.md
06-risk-control/REGENERA-06-RISK-CONTROL-10-10/docs/: ARCHITECTURE.md
06-risk-control/REGENERA-06-RISK-CONTROL-10-10/evidence/: BUILD-PROVENANCE.json  MANIFEST.json  (+6 more)
(+1524 files in other folders)
